--- a/content/posts/2022-06-23.md
+++ b/content/posts/2022-06-23.md
@@ -77,7 +77,7 @@ During that time the Arian party was in the ascendancy. They had another Church 
 
 Athanasius was able to return to Alexandria again in 362 after a new Emperor named Julian came to power. However, he was soon expelled again and went back to live with the monks. After Julian died in 363, Athanasius was reinstated by the new Emperor Jovian. However, when another Arian Emperor named Valens came to power, he exiled Athanasius yet again, but soon reinstated him through fear of a popular uprising in Alexandria. The locals wanted Athanasius.
 
-All through these exiles, Athanasius exercised his role as Patriarch of Alexandria from wherever he happened to be. He continued to communicate with the church in Alexandria even when exiled in distant places such as Belgium. He sent out a festal letter every year to give the dates of Christian feasts like Easter and to communicate other important matters. His 39th festal letter, sent in 367 AD, is the first place where the canon of the New Testament is set out; that is, the 27 books which the church accepts for reading in services. His years living among the monks were put to good use writing various defences, histories, and attacks on his enemies. His [Life of Anthony](https://en.wikipedia.org/wiki/Anthony_the_Great), a desert hermit, was an enormously popular book. The struggles of Athanasius were in no small part due to a confluence of church and state matters. At times it seemed he was a lone voice against the world, which is why people say *Athanasius contra mundum*. Nevertheless, he continued to fight for an exalted view of Jesus Christ, very God of very God.
+All through these exiles, Athanasius exercised his role as Patriarch of Alexandria from wherever he happened to be. He continued to communicate with the church in Alexandria even when exiled in distant places such as Belgium. He sent out a festal letter every year to give the dates of Christian feasts like Easter and to communicate other important matters. His 39th festal letter, sent in 367 AD, is the first place where the canon of the New Testament is set out; that is, the 27 books which the church accepts for reading in services. His years living among the monks were put to good use writing various defences, histories, and attacks on his enemies. His [Life of Anthony](https://en.wikipedia.org/wiki/Anthony_the_Great), who was one of the earliest desert monks, was an enormously popular book. The struggles of Athanasius were in no small part due to a confluence of church and state matters. At times it seemed he was a lone voice against the world, which is why people say *Athanasius contra mundum*. Nevertheless, he continued to fight for an exalted view of Jesus Christ, very God of very God.
 
 ## Sources
 
