--- a/content/posts/2022-06-23.md
+++ b/content/posts/2022-06-23.md
@@ -45,7 +45,7 @@ Athanasius was ordained as a deacon of the church in Alexandria in 319 AD.
 
 ## Who was Arius?
 
-Arius was also a deacon of the church in Alexandria. The Patriarch of Alexandria at the time was named Alexander. One day Alexander gave a sermon on the similarity of the Father and the Son. In response, Arius said that
+Arius was also a deacon of the church in Alexandria. The Patriarch of Alexandria at the time was named Alexander. One day Alexander gave a sermon on the Father and the Son. In response, Arius said that
 
 > If the Father begat the Son, he that was begotten had a beginning of existence: and from this it is evident, that there was a time when the Son was not.
 
