--- a/content/posts/2022-06-23.md
+++ b/content/posts/2022-06-23.md
@@ -55,7 +55,7 @@ This was popularized as a ditty that swept the Empire: *There was a time when he
 
 ## The Council of Nicaea
 
-Three hundred and eighteen bishops from around the Empire gathered for the Council at a place in Asia Minor (modern Turkey) named Nicaea. Some bore the marks of torture they had suffered during the Great Persecution -- they were serious about their religion. On one side were Arius and those who held that the Son was subordinate to the Father. On the other sided were Alexander and his assistant Athanasius, who regarded the Father and Son to be of the same essence. Constantine himself presided over the Council and participated in the debate. The result, after two months of argument, was the Nicene Creed:
+Three hundred and eighteen bishops from around the Empire gathered for the Council at a place in Asia Minor (modern Turkey) named Nicaea. Some bore the marks of torture they had suffered during the Great Persecution -- they were serious about their religion. On one side were Arius and those who held that the Son was subordinate to the Father. On the other sided were Alexander, his assistant Athanasius, and those who regarded the Father and Son to be of the same essence. Constantine himself presided over the Council and participated in the debate. The result, after two months of argument, was the Nicene Creed:
 
 > We believe in one God, the Father Almighty, Maker of all things visible and invisible. And in one Lord Jesus Christ, the Son of God, begotten of the Father [the only-begotten; that is, of the essence of the Father, God of God,] Light of Light, very God of very God, begotten, not made, consubstantial with the Father; By whom all things were made [both in heaven and on earth]; Who for us men, and for our salvation, came down and was incarnate and was made man; He suffered, and the third day he rose again, ascended into heaven; From thence he shall come to judge the quick and the dead. And in the Holy Ghost.
 
