--- a/content/posts/2022-08-11.md
+++ b/content/posts/2022-08-11.md
@@ -5,88 +5,16 @@ output:
 date: '2022-08-11'
 ---
 
-Today we will hear about a theological controversy that split the Christian world. It started around 318 AD as a dispute between two members of the Egyptian church but soon spread around the Mediterranean.
+Five hundred years ago one man asked another man to baptize him. So began the story of the Anabaptists. The what Baptists? The Anabaptists. "Ana-" in Greek is the same as "Re=" in English -- Anabaptist means Rebaptizer.
 
-## The setting
+## Background
 
-To give a bit of background, Christianity had only just been legalized. Just under three hundred years earlier, Christians began spreading the message of Jesus Christ. One early statement of faith was summarized in a five letter acronym that spelled out the Greek word for fish (ΙΧΘΥΣ):
+[Johannes Gutenburg](https://en.wikipedia.org/wiki/Johannes_Gutenberg) introduced the movable type printing press to Europe around the year 1450 AD:
 
-Ιησουσ Jesus
+> In Renaissance Europe, the arrival of mechanical movable type printing introduced the era of mass communication which permanently altered the structure of society. The relatively unrestricted circulation of information—including revolutionary ideas—transcended borders, captured the masses in the Reformation, and threatened the power of political and religious authorities; the sharp increase in literacy broke the monopoly of the literate elite on education and learning and bolstered the emerging middle class. Across Europe, the increasing cultural self-awareness of its people led to the rise of proto-nationalism, accelerated by the flowering of the European vernacular languages to the detriment of Latin's status as lingua franca. In the 19th century, the replacement of the hand-operated Gutenberg-style press by steam-powered rotary presses allowed printing on an industrial scale, while Western-style printing was adopted all over the world, becoming practically the sole medium for modern bulk printing.
 
-Χριστοσ Christ
-
-Θεου God's
-
-Υιου Son
-
-Σωτηρ Saviour
-
-In 64 AD the Great Fire of Rome burnt down a large part of the city. Nero blamed Christians to deflect blame from himself as the Romans began to suspect that he was responsible for lighting the fire. (See Tacitus, [Annals 15.44](https://www.perseus.tufts.edu/hopper/text?doc=Tac.+Ann.+15.44&fromdoc=Perseus%3Atext%3A1999.02.0078).) From that point on it was illegal to be a Christian and state-backed persecutions against Christians would break out from time to time.
-
-Persecutions sprung up under a number of emperors. One was launched by Emperor Decius around 250 AD. He sent out a decree saying that everyone had to make a sacrifice to the Roman gods on pain of death. People were required to obtain a certificate saying they had performed the necessary sacrifices. These documents, named [libelli](https://en.wikipedia.org/wiki/Libellus), were duly signed and witnessed. Here is an example:
-
-![P. Oxy. 3929](/images/POxy3929.jpg)
-
-A number of Christians refused to sacrifice and suffered the penalty. Others gave in after torture. Some paid pagans to do the deed in their place and thus obtained a certificate.
-
-About fifty years later, Emperor Diocletian (303-313 AD) began the [Great Persecution](https://en.wikipedia.org/wiki/Diocletianic_Persecution). He wanted to make Rome great again and thought that neglect of the Roman gods was to blame for the Empire's declining fortunes. He therefore began a purge of Christians by taking away their legal rights, their churches, their land, their books, and their leaders. Christians got around these hardships as best they could by, for example, handing over worthless writings to the illiterate soldiers instead of their prized scriptures. Nevertheless, many were tortured and killed, especially the clergy.
-
-Meanwhile, Constantine was moving up in the world. He went from being a military commander in Britain to being one of four emperors of the Empire in 306 AD to being the only emperor in 324 AD. In 312, he fought the [Battle of the Milvian Bridge](https://en.wikipedia.org/wiki/Battle_of_the_Milvian_Bridge) to defeat Emperor Maxentius. The church historian Eusebius says that before the battle, Constantine saw a cross in the sky with the (Greek) words *In this sign conquer.* His troops made the Chi-Rho their battle standard, fought the battle, and won. (Chi and rho are the first two letters of the Greek word *Christ*.) In 313 AD, Constantine issued the Edict of Milan, which legalized Christianity across the Empire.
-
-## Who was Athanasius?
-
-Athanasius was born in Egypt about 296 AD. He would have been about seven years old when the Great Persecution began. One episode that happened when he was a boy tells us what he was like:
-
-> Rufinus relates a story that as Bishop Alexander stood by a window, he watched boys playing on the seashore below, imitating the ritual of Christian baptism. He sent for the children and discovered that one of the boys (Athanasius) had acted as bishop. After questioning Athanasius, Bishop Alexander informed him that the baptisms were genuine, as both the form and matter of the sacrament had been performed through the recitation of the correct words and the administration of water, and that he must not continue to do this as those baptized had not been properly catechized. He invited Athanasius and his playfellows to prepare for clerical careers.
-
-[Wikipedia, Athanasius of Alexandria](https://en.wikipedia.org/wiki/Athanasius_of_Alexandria)
-
-Athanasius was ordained as a deacon of the church in Alexandria in 319 AD.
-
-## Who was Arius?
-
-Arius was also a deacon of the church in Alexandria. The Patriarch of Alexandria at the time was named Alexander. One day Alexander gave a sermon on the Father and the Son. In response, Arius said that
-
-> If the Father begat the Son, he that was begotten had a beginning of existence: and from this it is evident, that there was a time when the Son was not.
-
-[Wikipedia, Arius](https://en.wikipedia.org/wiki/Arius)
-
-This was popularized as a ditty that swept the Empire: *There was a time when he was not*. This implied that Christ is somehow subordinate to God the Father. The controversy grew so great that it came to the attention of Constantine, who took the unprecedented step of calling a General Council of the Church to settle the dispute.
-
-## The Council of Nicaea
-
-Three hundred and eighteen bishops from around the Empire gathered for the Council at a place in Asia Minor (modern Turkey) named Nicaea. Some bore the marks of torture they had suffered during the Great Persecution -- they were serious about their religion. On one side were Arius and those who held that the Son was subordinate to the Father. On the other sided were Alexander, his assistant Athanasius, and those who regarded the Father and Son to be of the same essence. Constantine himself presided over the Council and participated in the debate. The result, after two months of argument, was the Nicene Creed:
-
-> We believe in one God, the Father Almighty, Maker of all things visible and invisible. And in one Lord Jesus Christ, the Son of God, begotten of the Father [the only-begotten; that is, of the essence of the Father, God of God,] Light of Light, very God of very God, begotten, not made, consubstantial with the Father; By whom all things were made [both in heaven and on earth]; Who for us men, and for our salvation, came down and was incarnate and was made man; He suffered, and the third day he rose again, ascended into heaven; From thence he shall come to judge the quick and the dead. And in the Holy Ghost.
-
-This was a bad result for Arius, who was deposed and sent into exile along with the few who did not sign the creed or were suspected of being secret supporters of the Arian view.
-
-## Athanasius contra mundum
-
-Soon after returning from Nicaea, Athanasius was made Patriarch of Alexandria.
-
-> On the death of Alexander, five months after the termination of the Council of Nicaea, Athanasius was unanimously elected to fill the vacant see. He was most unwilling to accept the dignity, for he clearly foresaw the difficulties in which it would involve him. The clergy and people were determined to have him as their bishop, Patriarch of Alexandria, and refused to accept any excuses. He at length consented to accept a responsibility that he sought in vain to escape, and was consecrated in 326, when he was about thirty years of age.
-
-[T. Gilmartin, *Manual of Church History*, Vol. 1. Ch XVII, 1890]
-
-Athanasius remained Patriarch until he died in 373 AD, a term of forty seven years. During that time he was exiled no less than five times!
-
-The first time was in 335, when he was deposed and exiled by Constantine because a group supporting Arius said that Athanasius had threatened to cut off Egyptian grain shipments to Constantine's new capital (Constantinople). Athanasius returned from exile in 337 after Constantine died. However, one of Constantine's sons exiled Athanasius again in 338. That lasted until 345, when another one of Constantine's sons reinstated him. Athanasius then enjoyed ten years of peace. However, he was exiled again in 355 because another one of Constantine's sons had become Emperor. He was a strong supporter of Arius and prevailed upon a Church Council to condemn Athanasius. Athanasius went into the Egyptian desert and lived with the monks there for six years.
-
-During that time the Arian party was in the ascendancy. They had another Church Council where they declared that the Father and Son were of like essence rather than the same essence. The difference between the key words was the letter I: homo-ousios (same essence) versus homoi-ousios (like essence).
-
-Athanasius was able to return to Alexandria again in 362 after a new Emperor named Julian came to power. However, he was soon expelled again and went back to live with the monks. After Julian died in 363, Athanasius was reinstated by the new Emperor Jovian. However, when another Arian Emperor named Valens came to power, he exiled Athanasius yet again, but soon reinstated him through fear of a popular uprising in Alexandria. The locals wanted Athanasius.
-
-All through these exiles, Athanasius exercised his role as Patriarch of Alexandria from wherever he happened to be. He continued to communicate with the church in Alexandria even when exiled in distant places such as Belgium. He sent out a festal letter every year to give the dates of Christian feasts like Easter and to communicate other important matters. His 39th festal letter, sent in 367 AD, is the first place where the canon of the New Testament is set out; that is, the 27 books which the church accepts for reading in services. His years living among the monks were put to good use writing various defences, histories, and attacks on his enemies. His [Life of Anthony](https://en.wikipedia.org/wiki/Anthony_the_Great), about one of the earliest desert monks, was an enormously popular book. The struggles of Athanasius were in no small part due to a confluence of church and state matters. At times it seemed he was a lone voice against the world, which is why people say *Athanasius contra mundum*. Nevertheless, he continued to fight for an exalted view of Jesus Christ, very God of very God.
+[Wikipedia, Johannes Gutenberg]
 
 ## Sources
 
-[Athanasius](https://www.christianitytoday.com/history/people/theologians/athanasius.html)
-
-[Athanasius of Alexandria](https://en.wikipedia.org/wiki/Athanasius_of_Alexandria)
-
-[Lucian of Antioch](https://www.ccel.org/ccel/schaff/hcc2.v.xv.xxxvi.html)
-
-[Saint Athanasius the Great, Patriarch of Alexandria](https://www.oca.org/index.php/saints/lives/2014/05/02/101269-saint-athanasius-the-great-patriarch-of-alexandria)
-
-Francis Alice Forbes. [Saint Athanasius](https://www.gutenberg.org/cache/epub/27707/pg27707.html)
+[Johannes Gutenburg](https://en.wikipedia.org/wiki/Johannes_Gutenberg)
