--- a/content/posts/2022-08-11.md
+++ b/content/posts/2022-08-11.md
@@ -5,15 +5,37 @@ output:
 date: '2022-08-11'
 ---
 
-Five hundred years ago one man asked another man to baptize him. So began the story of the Anabaptists. The what Baptists? The Anabaptists. "Ana-" in Greek is the same as "Re=" in English -- Anabaptist means Rebaptizer.
+Five hundred years ago, one man asked another man to baptize him. So began the story of the Anabaptists. The *what* Baptists? The Anabaptists. "Ana-" in Greek is the same as "Re-" in English -- *Anabaptist* means *Rebaptizer*.
 
-## Background
+## Gutenberg
 
-[Johannes Gutenburg](https://en.wikipedia.org/wiki/Johannes_Gutenberg) introduced the movable type printing press to Europe around the year 1450 AD:
+[Johannes Gutenberg](https://en.wikipedia.org/wiki/Johannes_Gutenberg) introduced the movable type printing press to Europe around the year 1450 AD:
 
 > In Renaissance Europe, the arrival of mechanical movable type printing introduced the era of mass communication which permanently altered the structure of society. The relatively unrestricted circulation of information—including revolutionary ideas—transcended borders, captured the masses in the Reformation, and threatened the power of political and religious authorities; the sharp increase in literacy broke the monopoly of the literate elite on education and learning and bolstered the emerging middle class. Across Europe, the increasing cultural self-awareness of its people led to the rise of proto-nationalism, accelerated by the flowering of the European vernacular languages to the detriment of Latin's status as lingua franca. In the 19th century, the replacement of the hand-operated Gutenberg-style press by steam-powered rotary presses allowed printing on an industrial scale, while Western-style printing was adopted all over the world, becoming practically the sole medium for modern bulk printing.
 
-[Wikipedia, Johannes Gutenberg]
+[Wikipedia: Johannes Gutenberg]
+
+The first thing Gutenberg printed was a Bible. The [Gutenberg Bible](https://en.wikipedia.org/wiki/Gutenberg_Bible) was a copy of the Latin Vulgate, namely the Latin edition of the Bible that Jerome was commissioned to produce about 380 AD. So when Gutenberg made his copies, the Latin Vulgate had been dominant for about 1000 years.
+
+## Erasmus
+
+Over the next fifty years, just about every book that was regarded as worth having was printed. However, one -- the Greek New Testament -- was left out. It wasn't until 1516 that [Erasmus of Rotterdam](https://en.wikipedia.org/wiki/Erasmus) published the first printed edition. He had been working on a new *Latin* translation of the New Testament for years, and at some point decided to add the Greek on facing pages. No one knows why he decided to add the Greek -- it might have been so that people who knew Latin and Greek could check the veracity of his Latin translation. Erasmus said,
+
+> But one thing the facts cry out, and it can be clear, as they say, even to a blind man, that often through the translator's clumsiness or inattention the Greek has been wrongly rendered; often the true and genuine reading has been corrupted by ignorant scribes, which we see happen every day, or altered by scribes who are half-taught and half-asleep.
+
+While Erasmus' Latin translation was based on years of painstaking work, the Greek side was a bit rushed -- he grabbed a few Greek manuscripts, compared them with each other, and inserted corrections. Erasmus entrusted his Latin translation and marked-up Greek manuscripts to his printer friend Froben, who transformed them into a typeset production with Greek on the left and Latin on the right. This was published as a book titled [Novum Instrumentum omne](https://en.wikipedia.org/wiki/Novum_Instrumentum_omne), or *All New Instrument*, which Erasmus once described thus: *precipitatum fuit verius quam editum*; that is, "it was rushed rather than edited." (The one Greek manuscript he had for Revelation lacked the last few lines (22.16-21). Erasmus made his own back-translation from Latin into Greek, and that is what was printed.)
+
+![Last page of Erasmus' production](/images/Erasmus_last_page.webp)
+
+Though late on the scene, this turned out to be a very important book. Erasmus went on to publish five editions (1516, 1519, 1522, 1527, 1536). Martin Luther used the second (1519) edition as the basis for his German translation of the New Testament, published in September 1522; William Tyndale used the third (1522) edition to produce his English translation, published in 1526.
+
+## Luther
+
+As a student, [Martin Luther](https://en.wikipedia.org/wiki/Martin_Luther) began studying law but became more interested in philosophy and theology. One day in 1505 he was riding his horse to university when lightning struck nearby. He made a vow to become a monk on the spot. Regarding this as a vow he could not break, he entered an Augustinian monastery, though not gladly. An enlightened superior ordered him back to study, and Luther the monk rose to become Professor of Theology at the University of Wittenberg in 1512. As the story goes, Luther nailed his *Ninety-five Theses* (or Ninety-five Questions) to the door of All Saints' Church in Wittenberg on 31 October 1517. Here is a taste of the content:
+
+> Thesis 86: Why does the pope, whose wealth today is greater than the wealth of the richest Crassus, build the basilica of St. Peter with the money of poor believers rather than with his own money?
+
+The printing presses went to work and copies of the *Ninety-five Theses* quickly spread through Germany, reaching France, England, and Italy shortly afterwards. So began the Protestant Reformation -- a protest movement against the excesses of the prevailing religious establishment.
 
 ## Sources
 
