--- a/content/posts/2022-08-11.md
+++ b/content/posts/2022-08-11.md
@@ -23,20 +23,77 @@ Over the next fifty years, just about every book that was regarded as worth havi
 
 > But one thing the facts cry out, and it can be clear, as they say, even to a blind man, that often through the translator's clumsiness or inattention the Greek has been wrongly rendered; often the true and genuine reading has been corrupted by ignorant scribes, which we see happen every day, or altered by scribes who are half-taught and half-asleep.
 
-While Erasmus' Latin translation was based on years of painstaking work, the Greek side was a bit rushed -- he grabbed a few Greek manuscripts, compared them with each other, and inserted corrections. Erasmus entrusted his Latin translation and marked-up Greek manuscripts to his printer friend Froben, who transformed them into a typeset production with Greek on the left and Latin on the right. This was published as a book titled [Novum Instrumentum omne](https://en.wikipedia.org/wiki/Novum_Instrumentum_omne), or *All New Instrument*, which Erasmus once described thus: *precipitatum fuit verius quam editum*; that is, "it was rushed rather than edited." (The one Greek manuscript he had for Revelation lacked the last few lines (22.16-21). Erasmus made his own back-translation from Latin into Greek, and that is what was printed.)
+While Erasmus' Latin translation was based on years of painstaking work, the Greek side was a bit rushed -- he grabbed a few Greek manuscripts, compared them with each other, and inserted corrections. Erasmus entrusted his Latin translation and marked-up Greek manuscripts to his printer friend Froben, who transformed them into a typeset production with Greek on the left and Latin on the right. This was published as a book titled [Novum Instrumentum omne](https://en.wikipedia.org/wiki/Novum_Instrumentum_omne), or *All New Instrument*, which Erasmus once described thus: *precipitatum fuit verius quam editum*; that is, "it was rushed rather than edited." (The one Greek manuscript he had for Revelation lacked the last few lines (22.16-21) so Erasmus made his own back-translation from Latin into Greek, and that is what was printed. See [Erasmus and the Text of Revelation 22:19](http://www.jbtc.org/v16/Krans2011.pdf) for details.)
 
 ![Last page of Erasmus' production](/images/Erasmus_last_page.webp)
 
-Though late on the scene, this turned out to be a very important book. Erasmus went on to publish five editions (1516, 1519, 1522, 1527, 1536). Martin Luther used the second (1519) edition as the basis for his German translation of the New Testament, published in September 1522; William Tyndale used the third (1522) edition to produce his English translation, published in 1526.
+Though late on the scene, this turned out to be a very important book. Erasmus went on to publish five editions (1516, 1519, 1522, 1527, 1536). Martin Luther used the second (1519) edition as the basis for his German translation of the New Testament, published in September 1522; William Tyndale used the third (1522) edition to produce his English translation, published in 1526. People could now read the New Testament in their own language.
 
 ## Luther
 
 As a student, [Martin Luther](https://en.wikipedia.org/wiki/Martin_Luther) began studying law but became more interested in philosophy and theology. One day in 1505 he was riding his horse to university when lightning struck nearby. He made a vow to become a monk on the spot. Regarding this as a vow he could not break, he entered an Augustinian monastery, though not gladly. An enlightened superior ordered him back to study, and Luther the monk rose to become Professor of Theology at the University of Wittenberg in 1512. As the story goes, Luther nailed his *Ninety-five Theses* (or Ninety-five Questions) to the door of All Saints' Church in Wittenberg on 31 October 1517. Here is a taste of the content:
 
-> Thesis 86: Why does the pope, whose wealth today is greater than the wealth of the richest Crassus, build the basilica of St. Peter with the money of poor believers rather than with his own money?
+> Thesis 86: Why does the pope, whose wealth today is greater than the wealth of the richest [Crassus](https://en.wikipedia.org/wiki/Marcus_Licinius_Crassus), build the basilica of St. Peter with the money of poor believers rather than with his own money?
 
-The printing presses went to work and copies of the *Ninety-five Theses* quickly spread through Germany, reaching France, England, and Italy shortly afterwards. So began the Protestant Reformation -- a protest movement against the excesses of the prevailing religious establishment.
+The printing presses went to work and copies of the *Ninety-five Theses* quickly spread through Germany and the rest of Europe. So began the Protestant Reformation -- a protest movement that challenged certain practices of the Roman Catholic Church.
 
-## Sources
+## Radical reformers
 
-[Johannes Gutenburg](https://en.wikipedia.org/wiki/Johannes_Gutenberg)
+In 1519, a priest living in Zurich named [Ulrich Zwingli](https://en.wikipedia.org/wiki/Huldrych_Zwingli) began preaching through the New Testament, starting with the Gospel of Matthew then moving onto the Acts of the Apostles. He used Erasmus' New Testament, having earlier corresponded with Erasmus and studied his writings. Zwingli began to question a number of Catholic practices but continued to work within the civil structure, seeking support from the Zurich City Council at every step. Some people who had gathered around him wanted the reform to go even further. They were radical in the sense that they wanted to get back to the authentic roots of Christianity. (*Radix* is the Latin for *root.*) Some of them began to question the validity of infant baptism and some even refused to have their children baptized. On January 17, 1525, the Zurich Council decreed that anyone with unbaptized children had one week to have them baptized or be expelled from Zurich. Sixteen of these radical reformers met on the evening of January 21 at the house of [Felix Manz](https://en.wikipedia.org/wiki/Felix_Manz) and his mother. After prayer, a man named George Blaurock stood up and asked a man named Conrad Grebel to baptize him, which Grebel did. Blaurock then baptized the others. (Grebel was himself facing expulsion because he had refused to have his recently born daughter baptized.)
+
+## Core beliefs
+
+The radical reformers were keen to do what the New Testament taught. Their leaders formulated the [Schleitheim Confession](https://en.wikipedia.org/wiki/Schleitheim_Confession), which includes the following seven articles:
+
+Baptism
+: Baptism is administered only to those who have consciously repented, turned away from sin, amended their lives and believe that Christ has died for their sins and who request it for themselves (believer's baptism). Infant baptism is specifically denounced.
+
+The Ban (Excommunication)
+: A Christian should live with discipline and walk in the way of righteousness, following after Jesus every day. Those members of the Body who slip and fall into sin should be admonished twice in private, but the third offense should be openly disciplined and banned as a final recourse. This should always occur prior to the breaking of the bread, to preserve the unity and purity of the Body of Christ.
+
+Breaking of Bread (Communion)
+: Only those who have been baptized into the Body of Christ are members of the Body, thus only they can take part in the communion of the Body of Christ. Participation in Communion is an observance and remembrance of Christ's body and blood; the physical body and blood of Christ is not believed to be received in the sacrament.
+
+Separation from Evil
+: The community of Christians shall have no association with those who remain in disobedience and a spirit of rebellion against God. There can be no fellowship with the wickedness of this earthly world; therefore there can be no participation in the organizations, works, church services, meetings or civil affairs of those who live in contradiction to the commands of God (this may include Catholics and Protestants as well as other religions and pagans). All evil must be put away, including using weapons of force such as the sword and armor.
+
+Pastors in the Church
+: All elders and leaders in the church must be men of good repute, as described in Scripture. Some of the responsibilities they must faithfully carry out are teaching, public reading of Scripture, disciplining, applying the ban, leading in prayer, and the sacraments. They are to be supported by the church, but must also be disciplined if they sin.
+
+The Sword (Christian pacifism) – nonresistance
+: Violence must not be used in any circumstance. The way of nonviolence is patterned after the example of Christ who never exhibited violence in the face of persecution or as a punishment for sin. A Christian must love their enemies and pray for those who persecute them, as Jesus did. A Christian should not pass judgment in worldly disputes. It is not appropriate for a Christian to serve as a magistrate; a magistrate acts according to the rules of the world and uses force or orders force to be used, not acting according to the rules of heaven; their weapons are worldly, but the weapons of a Christian are spiritual.
+
+The Oath
+: No oaths should be taken because Jesus prohibited the taking of oaths and swearing, teaching rather complete honesty. Testifying or affirming is not the same thing as swearing. When a person bears testimony, they are testifying about the truth and the present, whether it be good or evil.
+
+[Wikipedia: Schleitheim Confession]
+
+## Persecution
+
+The radical reformers were given the name *Anabaptists* by their detractors. The radicals would not have given themselves this name because they did not regard infant baptism as authentic. Their conviction was that they weren't rebaptizing because they had not been authentically baptized as infants. This was more than an academic proposition: baptism as an infant was how a person became a member of Christian society. To not allow baptism would today be like refusing to register a birth.
+
+Protestants, Catholics, and civil authorities were all against the Anabaptists. In 1526, the Zurich Council passed a law that made adult re-baptism punishable by drowning. Felix Manz was the first victim of the new law. Zwingli and the Council condemned him and he was led away to be drowned on 5 January 1527. Anabaptists throughout Europe began to be hunted down. Prince Ferdinand the First -- the Emperor of the Holy Roman Empire -- declared that drowning (a third baptism) was the best antidote to Anabaptism. Many were tortured and others were executed by drowning or being burned at the stake. One who met this terrible fate was [Dirk Willems](https://en.wikipedia.org/wiki/Dirk_Willems).
+
+![Dirk Willems](/images/Dirk_Willems.jpg)
+
+Willems had been imprisoned for being an Anabaptist but managed to escape by climbing down a rope made of knotted rags and running off across a frozen lake. A guard pursued him but fell through thin ice that Dirk safely traversed because of his light weight, being half starved on prison rations. The guard called out for help and Dirk -- bound by his Christian convictions -- turned back to save the guard from certain death and was thus recaptured. Willems was tried before seven judges and condemned to death by burning, which sentence was duly carried out.
+
+## The Münster Rebellion
+
+An infamous episode in Anabaptist history took place in the German city of Münster. It was a walled city and was ruled by a group of Anabaptists for 15 months in 1534 and 1535. The Anabaptists managed to take over the city council. Adult baptism was made compulsory. The city was placed under siege by the expelled Catholic bishop. The spire of one of the churches inside the city was removed to make a platform for shooting canon balls at the Catholic forces. The leaders of the city proclaimed it to be the New Jerusalem. There were many more women than men in the city, so polygamy was made compulsory as well. By the end of the siege the residents were starving. When the city was finally taken, the three principal Anabaptist leaders were tortured and executed in the market place. Their bodies were placed in iron cages and hung from another church; the cages remain there to this day (minus the bones).
+
+![Iron cages](/images/Iron_cages.jpg)
+
+## Menno Simons
+
+[Menno Simons](https://en.wikipedia.org/wiki/Menno_Simons) was ordained as a Catholic priest in Utrecht around 1515. He had never actually read the Bible but around 1527 began to search the Scriptures over the question of transubstantiation. Later he began to look at the question of infant baptism. He came into contact with survivors of the Münster Rebellion and his brother Pieter became an Anabaptist. Unfortunately, Pieter was killed in during a battle over a Catholic monastery. This threw Menno into a spiritual crisis during which he "prayed to God with sighs and tears that He would give to me, a sorrowing sinner, the gift of His grace, create within me a clean heart, and graciously through the merits of the crimson blood of Christ, He would graciously forgive my unclean walk and unprofitable life."
+
+Menno Simons himself became an Anabaptist and a leader of the movement. Here is an example of what he said:
+
+> For true evangelical faith is of such a nature that it cannot lie dormant; but manifests itself in all righteousness and works of love; it dies unto flesh and blood; destroys all forbidden lusts and desires; cordially seeks, serves and fears God; clothes the naked; feeds the hungry; consoles the afflicted; shelters the miserable; aids and consoles all the oppressed; returns good for evil; serves those that injure it; prays for those that persecute it; teaches, admonishes and reproves with the Word of the Lord; seeks that which is lost; binds up that which is wounded; heals that which is diseased and saves that which is sound. The persecution, suffering and anxiety which befalls it for the sake of the truth of the Lord, is to it a glorious joy and consolation.
+
+One of his key teachings was to renounce all violence, the proof text being "Peter, put away your sword."
+
+## Anabaptists today
+
+The [Mennonites](https://en.wikipedia.org/wiki/Mennonites) go all the way back to Menno Simons. Their rule of life is the Sermon on the Mount, and they practice strict non-resistance, meaning that they do not take participate in warfare. Besides the Mennonites, modern Anabaptists include the Amish and Hutterites. Many live in the Americas, where their ancestors went in past centuries to escape persecution in Europe. Altogether, there are just over 2 million Anabaptists today, living in 86 countries.
